--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,11 @@
 language: clojure
-lein: lein2
+jdk:
+- oraclejdk8
+cache:
+  directories:
+  - "$HOME/.lein"
+  - "$HOME/.m2"
+script:
+  - lein test
+notifications:
+  email: false
